# molass-library

./: .buildinfo  .buildinfo.bak  .gitignore  API.html  BOUNDED_LRF_PLAN.html  CHANGELOG_2026-02-02.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPILOT-INIT-ACTION.md  COPILOT-INIT.md  CURRENT-STATUS.md  FORMAT.html  JOSS-BEGINNER-GUIDE.md  JOSS-REVIEW-INSIGHTS.md  PROJECT_STATUS.md  QUICK-REFERENCE.md  README.md  SAMPLES.html  SESSION-STARTUP.md  SHIMIZU-QUICK-START.md  SIMPLE-RESPONSE-PLAN.md  SIMPLE-START.md  SIMPLE-TASKS.md  SKILL-BASED-TASKS.md  START-HERE.md  SYNC-GUIDE.md  TAKAHASHI-QUICK-START.md  USER-IDENTIFICATION.md  _check_tau.py  _issue_cma_async_crash.md  example_test.py  genindex.html  index.html  modules.html  molass-library-subtree-sync.md  molass.Baseline.Baseline2D.html  molass.Baseline.BaselineUtils.html  molass.Baseline.Basesurface.html  molass.Baseline.LpmBaseline.html  (+133 more)
.github/: copilot-instructions.md
Copilot/: API_IMPROVEMENTS.md  DESIGN_split_optimizer_architecture.md  ai-friendly-coding.md  copilot-guidelines.md  plot_ai_improvement_cycle.py  workflow_notes.md
_sources/: API.rst.txt  BOUNDED_LRF_PLAN.md  FORMAT.md  SAMPLES.md  index.rst  index.rst.txt  molass.Baseline.Basesurface.rst.txt  molass.Baseline.LpmBaseline2D.rst.txt  molass.Baseline.SimpleBaseline.rst  molass.Baseline.Surface.rst.txt  molass.Baseline.UvDiffEffect.rst  molass.Baseline.rst.txt  molass.Batch.V1Legacy.rst  molass.Batch.rst  molass.Bridge.rst.txt  molass.CurveModels.Scattering.FormFactors.rst  molass.CurveModels.Scattering.rst  molass.CurveModels.rst  molass.DENSS.DenssUtils.rst  molass.DENSS.rst  molass.DataObjects.Curve.rst.txt  molass.DataObjects.SsMatrixData.rst.txt  molass.DataObjects.rst.txt  molass.DataUtils.AnomalyHandlers.rst  molass.DataUtils.Beamline.rst  molass.DataUtils.Concentration.rst  molass.DataUtils.FolderWalker.rst  molass.DataUtils.ForwardCompat.rst  molass.DataUtils.UvFileTrimming.rst  molass.DataUtils.UvLoader.rst  molass.DataUtils.ZipFolder.rst  molass.DataUtils.rst  molass.Except.rst  molass.FlowChange.FlowChange.rst  molass.FlowChange.FlowChangeJudge.rst  (+50 more)
(+883 files in other folders)
