[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "molass"
version = "1.0.1"

dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "tqdm",
  "pybaselines>=1.2.0",
  "molass_legacy>=1.6.10",
  "statsmodels",
  "scikit-learn",
  "toml",
  "psutil",
  "seaborn",
  "numba",
  "ruptures",
  "learnsaxs",
  "mrcfile",
  "ipywidgets",
  "ipykernel",
  "cma",
  "shapely",
]

requires-python = ">=3.12,<3.15"

authors = [
  {name = "Masatsuyo Takahashi", orcid = "0009-0007-1466-5563"},
  {name = "Nobutaka Shimizu", orcid = "0000-0002-3636-1663"},
]

maintainers = [
  {name = "Masatsuyo Takahashi", orcid = "0009-0007-1466-5563"},
  {name = "Nobutaka Shimizu", orcid = "0000-0002-3636-1663"},
]

description = "Matrix Optimization with Low-rank factorization for Automated analysis of SEC-SAXS"
readme = "README.md"
license = { text = "GNU General Public License v3.0" }

keywords = ["SEC-SAXS"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
excel = [
  "pywin32"
]
testing = [
  "pytest",
  "pytest-cov",
  "pytest-env",
  "pytest-order",
]

[project.urls]
Repository = "https://github.com/biosaxs-dev/molass-library"

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py", "*.py"]
pythonpath = [
  ".",
  "../molass-legacy",
]
env = [
    "MOLASS_ENABLE_PLOTS=false",
    "MOLASS_SAVE_PLOTS=false"
]
filterwarnings = [
    "ignore::SyntaxWarning",
    "ignore::DeprecationWarning",
    "ignore:.*non-interactive.*:UserWarning",
]

[tool.coverage.run]
branch = true
parallel = true
source = ["molass"]
concurrency = ["multiprocessing"]